<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">校园订餐_XJ</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">欢迎使用</string>
    <string name="merchants">商家</string>
    <string name="fanpiao">饭票</string>
    <string name="find">发现</string>
    <string name="my">我的</string>
    <string name="hello_picture">欢迎图片</string>
    <string name="menu">菜单</string>
    <string name="pic">图片</string>
    <string name="eva">评价</string>

</resources>
