<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/@android:tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        >
        <FrameLayout android:id="@android:id/tabcontent" 
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0"/>
        <TabWidget android:id="@android:id/tabs" 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
             />
        <View 
            android:layout_width="fill_parent"
            android:layout_height="0.8dp"
            android:background="@color/blue"
            />
           <RadioGroup
             android:id="@+id/tab_items"
             android:gravity="center_vertical"
             android:layout_width="fill_parent"
             android:layout_height="60dp"
             android:orientation="horizontal"
             android:layout_gravity="bottom"
             >
             <RadioButton 
                 android:id="@+id/tab_item_merchants"
                 style="@style/tab_item_button"
                 android:checked="true"
                 android:text="@string/merchants"
                 />
             <View 
                 android:layout_width="0.8dp"
                 android:layout_height="30dp"
                 android:background="@color/black"
                 />
             
             <RadioButton 
                 android:id="@+id/tab_item_fanpiao"
                 style="@style/tab_item_button"
                 
                 android:text="@string/fanpiao"
                 />
             <View 
                 android:layout_width="0.8dp"
                 android:layout_height="30dp"
                 android:background="@color/black"
                 />
              <RadioButton 
                 android:id="@+id/tab_item_find"
                 style="@style/tab_item_button"
                 android:text="@string/find"
                 />
             <View 
                 android:layout_width="0.8dp"
                 android:layout_height="30dp"
                 android:background="@color/black"
                 />
              <RadioButton 
                 android:id="@+id/tab_item_my"
                 style="@style/tab_item_button"
                 android:text="@string/my"
                 />
               
               
           </RadioGroup>
        
        
    </LinearLayout>

</TabHost>
